# fwm

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  default.env  dump_and_restore.sh  env.default  main.py  nginx.default  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  set_env_variables.sh  start-server.sh
.github/workflows/: build.yml  lint.yml  test.yml
appcreator/: code_templates.py  creator.py  import_utils.py  populate_fields.py
archiv/: admin.py  dal_urls.py  dal_views.py  filters.py  forms.py  ingest_forms.py  ingest_views.py  models.py  tables.py  tasks.py  tests.py  urls.py  views.py
archiv/data/: FWM_Daten.xlsx
archiv/fixtures/: dump.json
archiv/migrations/: 0001_initial.py  0002_alter_geography_options_geography_orig_data_csv.py  0002_analyse_new_analyse.py  0002_auto_20211103_1010.py  0002_auto_20211112_0854.py  0002_project_alter_number_options_alter_analyse_institute_and_more.py  0003_alter_analyse_new_analyse.py  0003_alter_project_description.py  0003_auto_20211103_1020.py  0003_auto_20211112_0946.py  0003_geography_continent_geography_land_and_more.py  0004_alter_quarry_images.py  0004_auto_20211112_0952.py  0004_number_legacy_pk.py  (+15 more)
djangobaseproject/: celery.py  settings.py  urls.py
infos/: models.py  special_views.py  tests.py  urls.py  views.py
vocabs/: admin.py  apps.py  dal_urls.py  dal_views.py  import_utils.py  models.py  tests.py
webpage/: metadata.py  tests.py  urls.py  views.py
zotero_ac/: admin.py  apps.py  dal_urls.py  dal_views.py  forms.py  models.py  tests.py  utils.py
(+37 files in other folders)
