[project]
name = "fwm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "acdh-django-browsing>=3.3.2",
    "celery>=5.5.3",
    "django>=5.2.8",
    "django-autocomplete-light>=3.12.1",
    "django-celery-results>=2.6.0",
    "django-extensions>=4.1",
    "django-leaflet>=0.32.0",
    "django-mptt>=0.18.0",
    "django-next-prev>=1.1.0",
    "django-spaghetti-and-meatballs>=0.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
